Added buttons to change language and french tutorial !

--- a/res/lang/french.lang
+++ b/res/lang/french.lang
@@ -7,7 +7,7 @@ client_copyright_line2=par Alexander Winter
 
 client_howto_button=Comment jouer
 client_join_button=Rejoindre une partie
-client_host_button=HÃ©berger une partie
+client_host_button=Héberger une partie
 client_leave_button=Quitter
 
 client_username=Votre nom:
