--- a/res/lang/english.lang
+++ b/res/lang/english.lang
@@ -29,5 +29,14 @@ client_privateserver_address=Address:
 client_privateserver_password=Password:
 client_privateserver_connect=Connect
 
+client_host_title=Host your game
+client_host_warning=Warning, if you want to make a public game, you will need to open the server port from your router. This can be really complicated for people that aren't confortable with computers or networking. Although, you still can play in local (LAN) with your port closed or you can use hamachi to bypass your router. Please do not check the "public" box if you can't open your ports to prevent people from trying to connect on your machine.
+client_host_boardsize=Board size:
+client_host_port=Port:
+client_host_public=Public
+client_host_maxplayers=Max players:
+client_host_validate=Host game
+client_host_gamename={$PLAYER}'s game
+
 client_connection_failed_title=Connection failed
 client_connection_failed_message=The connection to this server failed.
